--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@ Pits by 1) learning the grammar of Peach Pit, 2) understanding specific
 network protocols via their specifications.</p>
 <h2 id="blogs">Blogs</h2>
 <ul>
+<li><a href="./posts/2021-08-18-Display-in-QEMU.html">Display in QEMU</a></li>
 <li><a href="./posts/2020-11-30-wllvm-clang-qemu-x86_64.html">2020-11-30 Clang, wllvm, passes, QEMU for x86_64</a></li>
 <li><a href="./posts/2020-11-18-buildroot-qemu-x86_64.html">2020-11-18 Buildroot, QEMU and Linux kernel for x86_64</a></li>
 </ul>
