add github issue for questions and comments

--- a/index.html
+++ b/index.html
@@ -407,6 +407,8 @@ protocols. I joined this project as an intern and wrote several Peach
 Pits by 1) learning the grammar of Peach Pit, 2) understanding specific
 network protocols via their specifications.</p>
 <h2 id="blogs">Blogs</h2>
+<p>Please raise <a href="https://github.com/cyruscyliu/cyruscyliu.github.io/issues">issues</a>
+if any questions or comments.</p>
 <ul>
 <li><a href="./posts/2021-08-18-Display-in-QEMU.html">Display in QEMU</a></li>
 <li><a href="./posts/2020-11-30-wllvm-clang-qemu-x86_64.html">2020-11-30 Clang, wllvm, passes, QEMU for x86_64</a></li>
