--- a/index.html
+++ b/index.html
@@ -389,16 +389,16 @@ Linux Kernels through Model-Guided Kernel Execution&quot; got accepted at
 cameras, and other high-end devices. Then, we can dynamically analyze
 bugs or vulnerabilities, detect bugs or vulnerabilities, make honey
 pots, detect and inspect malware. I lead this project now. A relative
-research paper is <a href="#tobeprinted">FirmGuide (ASE'21) (1st co-authors)</a>.</p>
+research paper is <a href="./papers/firmguide-ase21.pdf">FirmGuide (ASE'21) (1st co-authors)</a>.</p>
 <h3 id="0x01-android-authentication">0x01 Android Authentication</h3>
 <p>This project tries to evaluate existing and propose new implicit
 continuous authentication approaches. The implicit continuous
 authentication can be a sector authentication factor for the
 fingerprint. I joined this project as an intern and then proposed this
-project to be my final project. Relative research papers are <a href="https://ieeexplore.ieee.org/abstract/document/8611185">RiskCog
+project to be my final project. Relative research papers are <a href="./papers/riskcog-tmc20.pdf">RiskCog
 (TMC'20)</a>,
-<a href="https://ieeexplore.ieee.org/abstract/document/9151330">ESPIALCOG (TMC'20)(5th
-author)</a>, <a href="https://ieeexplore.ieee.org/abstract/document/9167280">One
+<a href="./papers/espialcog-tmc20.pdf">ESPIALCOG (TMC'20)(5th
+author)</a>, <a href="./papers/one-cycle-attack-tifs20.pdf">One
 Cycle Attack (TIFS'20) (3rd
 author)</a>.</p>
 <h3 id="0x00-network-protocol-fuzzing-archived">0x00 Network Protocol Fuzzing (Archived)</h3>
