--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ Linux Kernels through Model-Guided Kernel Execution&quot; got accepted at
 cameras, and other high-end devices. Then, we can dynamically analyze
 bugs or vulnerabilities, detect bugs or vulnerabilities, make honey
 pots, detect and inspect malware. I lead this project now. A relative
-research paper is <a href="./papers/firmguide-ase21.pdf">FirmGuide (ASE'21) (1st co-authors)</a>.</p>
+research paper is <a href="./papers/firmguide-ase21.pdf">FirmGuide (ASE'21) (1st co-authors) (82/440=18.6%)</a>.</p>
 <h3 id="0x01-android-authentication">0x01 Android Authentication</h3>
 <p>This project tries to evaluate existing and propose new implicit
 continuous authentication approaches. The implicit continuous
