--- a/index.html
+++ b/index.html
@@ -379,17 +379,21 @@ cyruscyliu@gmail.com or qiangliu@zju.edu.cn or qiang.liu@epfl.ch.</p>
 <a href="https://github.com/cyruscyliu">GitHub</a>
 <a href="https://www.twitter.com/qiangliu717">Twitter</a></p>
 <h2 id="news">News</h2>
+<p>Our Paper &quot;ECMO: Peripheral Transplantation to Rehost Embedded Linux Kernels&quot;
+got accepted at CCS'21!</p>
 <p><a href="https://twitter.com/qiangliu717/status/1413674256152637441?s=20">Our Paper &quot;FirmGuide: Boosting the Capability of Rehosting Embedded
 Linux Kernels through Model-Guided Kernel Execution&quot; got accepted at
 @ASE_conf 2021! #ASE2021 @zhclhy @JMuhui
 @yajinzhou.</a></p>
 <h2 id="projects-publications-and-real-impact">Projects, Publications, and Real Impact</h2>
 <h3 id="0x02-embedded-system-rehosting">0x02 Embedded System Rehosting</h3>
-<p>This project tries to rehost embedded Linux kernels for routers,
-cameras, and other high-end devices. Then, we can dynamically analyze
-bugs or vulnerabilities, detect bugs or vulnerabilities, make honey
-pots, detect and inspect malware. I lead this project now. A relative
-research paper is <a href="./papers/firmguide-ase21.pdf">FirmGuide (ASE'21) (1st co-authors) (82/440=18.6%)</a>.</p>
+<p>This project tries to rehost embedded Linux kernels for routers, cameras, and
+other high-end devices. Then, we can dynamically analyze bugs or
+vulnerabilities, detect bugs or vulnerabilities, make honey pots, detect and
+inspect malware. I lead this project now. A relative research paper is
+<a href="./papers/firmguide-ase21.pdf">FirmGuide (ASE'21) (1st co-authors)
+(82/440=18.6%)</a>, <a href="./#tobeprinted">ECMO (CCS'21), 4th
+author</a>.</p>
 <h3 id="0x01-android-authentication">0x01 Android Authentication</h3>
 <p>This project tries to evaluate existing and propose new implicit
 continuous authentication approaches. The implicit continuous
