update more tips:

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ if any questions or comments.</p>
 </ul>
 <h3 id="summary-when-visiting-epfl-in-2021">Summary when visiting EPFL in 2021</h3>
 <ul>
-<li>0x10 <a href="posts/2021-09-07-Research-Philosophy.html">How to Do [System|Software] (Security) Researc</a></li>
+<li>0x10 <a href="posts/2021-09-07-Research-Philosophy.html">How to Do [System|Software] (Security) Research</a></li>
 <li>0x0f <a href="posts/2021-09-03-Summary-Research-SE.html">Skills and Collaboration for Research Project Code</a></li>
 <li>0x0e <a href="posts/2021-08-27-Principle-of-Presentation.html">Principles of Research Presentation</a></li>
 </ul>
