update android project description

--- a/index.html
+++ b/index.html
@@ -395,15 +395,13 @@ inspect malware. I lead this project now. A relative research paper is
 (82/440=18.6%)</a>, <a href="./#tobeprinted">ECMO (CCS'21), 4th
 author</a>.</p>
 <h3 id="0x01-android-authentication">0x01 Android Authentication</h3>
-<p>This project tries to evaluate existing and propose new implicit
-continuous authentication approaches. The implicit continuous
-authentication can be a sector authentication factor for the
-fingerprint. I joined this project as an intern and then proposed this
-project to be my final project. Relative research papers are <a href="./papers/riskcog-tmc20.pdf">RiskCog
-(TMC'20)</a>,
-<a href="./papers/espialcog-tmc20.pdf">ESPIALCOG (TMC'20)(5th
-author)</a>, <a href="./papers/one-cycle-attack-tifs20.pdf">One
-Cycle Attack (TIFS'20) (3rd
+<p>This project tries to evaluate existing and propose new implicit continuous
+authentication approaches. The implicit continuous authentication can be a
+second authentication factor for fingerprint and face identification. I joined
+this project as an intern and then proposed this project to be my final project
+for my Bachelor's degree. Relative research papers are <a href="./papers/riskcog-tmc20.pdf">RiskCog
+(TMC'20)</a>, <a href="./papers/espialcog-tmc20.pdf">ESPIALCOG (TMC'20)(5th
+author)</a>, and <a href="./papers/one-cycle-attack-tifs20.pdf">One Cycle Attack (TIFS'20) (3rd
 author)</a>.</p>
 <h3 id="0x00-network-protocol-fuzzing-archived">0x00 Network Protocol Fuzzing (Archived)</h3>
 <p>This project tries to fuzz network protocols, especially router
