--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@ Linux Kernels through Model-Guided Kernel Execution&quot; got accepted at
 <p>This project tries to rehost embedded Linux kernels for routers, cameras, and
 other high-end devices. Then, we can dynamically analyze bugs or
 vulnerabilities, detect bugs or vulnerabilities, make honey pots, detect and
-inspect malware. I lead this project now. A relative research paper is
-<a href="./papers/firmguide-ase21.pdf">FirmGuide (ASE'21) (1st co-authors)
+inspect malware. Cen Zhang and I lead this project now. A relative research
+paper is <a href="./papers/firmguide-ase21.pdf">FirmGuide (ASE'21) (co-first-authors)
 (82/440=18.6%)</a>, and <a href="./papers/ecmo-ccs21.pdf">ECMO (CCS'21), 4th
 author</a>.</p>
 <h3 id="0x01-android-authentication">0x01 Android Authentication</h3>
