update new link

--- a/index.html
+++ b/index.html
@@ -379,8 +379,9 @@ cyruscyliu@gmail.com or qiangliu@zju.edu.cn or qiang.liu@epfl.ch.</p>
 <a href="https://github.com/cyruscyliu">GitHub</a>
 <a href="https://www.twitter.com/qiangliu717">Twitter</a></p>
 <h2 id="news">News</h2>
-<p>Our Paper &quot;ECMO: Peripheral Transplantation to Rehost Embedded Linux Kernels&quot;
-got accepted at CCS'21!</p>
+<p><a href="https://twitter.com/qiangliu717/status/1440590703067758592">Our Paper &quot;ECMO: Peripheral Transplantation to Rehost Embedded Linux Kernels&quot;
+got accepted at
+CCS'21!</a></p>
 <p><a href="https://twitter.com/qiangliu717/status/1413674256152637441?s=20">Our Paper &quot;FirmGuide: Boosting the Capability of Rehosting Embedded
 Linux Kernels through Model-Guided Kernel Execution&quot; got accepted at
 @ASE_conf 2021! #ASE2021 @zhclhy @JMuhui
