--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@ network protocols via their specifications.</p>
 <p>Please raise <a href="https://github.com/cyruscyliu/cyruscyliu.github.io/issues">issues</a>
 if any questions or comments.</p>
 <ul>
+<li><a href="./posts/2021-10-22-fuzzing-presentation.html">2021-10-24 CS-725 Presentation - Fuzz Testing</a></li>
 <li><a href="./posts/2021-08-18-Display-in-QEMU.html">2021-08-18 Display in QEMU</a></li>
 <li><a href="./posts/2020-11-30-wllvm-clang-qemu-x86_64.html">2020-11-30 Clang, wllvm, passes, QEMU for x86_64</a></li>
 <li><a href="./posts/2020-11-18-buildroot-qemu-x86_64.html">2020-11-18 Buildroot, QEMU and Linux kernel for x86_64</a></li>
