--- a/index.html
+++ b/index.html
@@ -370,10 +370,8 @@ code {
 <p>Hi, my name is Qiang Liu. I am currently a Ph.D. student at the College of
 Computer Science of Zhejiang University (ZJU), Hangzhou, China. I'm now visiting
 HEXHIVE at École polytechnique fédérale de Lausanne (EPFL), Lausanne,
-Switzerland. My research interests include system and software security. I
-currently focus on hypervisor fuzzing. When I am free, I like chatting, reading,
-and learning new skills. On weekends, I will do exercises or outdoor activities.
-It is welcome to contact me by email at cyruscyliu@gmail.com.</p>
+Switzerland. My research interests include system and software security.  It is
+welcome to contact me by email at cyruscyliu@gmail.com.</p>
 <p><a href="./Qiang_s_CV.pdf">CV</a>
 <a href="https://scholar.google.com/citations?user=fa1uB2sAAAAJ&amp;hl=en">Google Scholar</a>
 <a href="https://github.com/cyruscyliu">GitHub</a>
