update cov control in libfuzzer part 1

--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@ network protocols via their specifications.</p>
 <p>Please raise <a href="https://github.com/cyruscyliu/cyruscyliu.github.io/issues">issues</a>
 if any questions or comments.</p>
 <ul>
+<li><a href="./posts/2021-11-02-libFuzzer-cov-control.html">2021-11-03 Coverage Control in libFuzzer</a></li>
 <li><a href="./posts/2021-11-15-ase-firmguide.html">2021-11-18 ASE'21 - FirmGuide</a></li>
 <li><a href="./posts/2021-10-22-fuzzing-presentation.html">2021-10-24 CS-725 Presentation - Fuzz Testing</a></li>
 <li><a href="./posts/2021-08-18-Display-in-QEMU.html">2021-08-18 Display in QEMU</a></li>
